XD-3113: Resolve Most Sonar Critical Violations
JIRA: https://jira.spring.io/browse/XD-3113

Does __not__ address the cases where classes implement `Comparable` but
don't override `equals()`.